# ClingySOCKs-Community

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  railway.toml
memory/: .dockerignore  .env.example  Dockerfile  README.md  mcp_config.json  pyproject.toml  railway.json  railway.toml  requirements.txt  reset_harvest.py
memory/McpServers/: FileSystemMCP.py  MemoryMCP.py  WebSearchMCP.py  _env_bridge.py
memory/api/: auth.py  chat_context.py  main.py  schemas.py  ws_manager.py
memory/api/routes/: admin.py  auth.py  chat.py  context.py  conversations.py  enhanced_memory.py  files.py  group_chat.py  group_management.py  harvest.py  import_chat.py  memory.py  messages.py  models.py  openclaw.py  personas.py  public_media.py  user_profile.py  vault_local.py  voice.py  voice_live.py
memory/scripts/: backup_db.py  run_harvest.py  run_harvest_all.py  setup_db.py
memory/src/: config.py  edition.py  harvest.py  memory_registry.py  model_registry.py  persona_config.py
memory/src/agent/: __init__.py  subagents.py
memory/src/auth/: __init__.py  base.py  factory.py  local_auth.py
memory/src/db/: auth_models.py  models.py  session.py
memory/src/importers/: json_importer.py  (+1 more)
memory/tests/: conftest.py  test_agent_scheduler.py  test_api_routes.py  test_channels.py  test_contradiction_detector.py  test_harvest_model_selection.py  test_harvest_plan.py  test_llm_resilience.py  test_memory_surfacing.py  test_orient_ground.py  test_persistent_threads.py  test_presence_hooks.py  test_subconscious_daemon.py  test_timeline.py  test_tool_schemas.py
(+103 files in other folders)
